Fixed Loading Indicator Bug
Fixed a bug causing the loading indicator to be messed up when sorting and then refreshing the page

--- a/styles.css
+++ b/styles.css
@@ -467,11 +467,11 @@ select {
 }
 
 .books__loading--spinner {
-    display: none;
+  display: none !important;
 }
 
 .books__loading .books__loading--spinner {
-    display: block;
+  display: block !important;
 }
 
 .fa-spinner {
